--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -6,51 +6,103 @@
   </button>
   <p class="text-3xl bold">Score</p>
 </div>
-<form
-  [formGroup]="aTeamForm"
-  class="p-2 m-2 space-y-3 bg-red-300 shadow-md team hover:shadow-md shadow-red-600 rounded-xl"
->
-  <div class="w-full">
-    <div class="flex space-x-3">
-      <div class="w-1/3">
-        <label class="p-1">PokePaste</label>
-        <input
-          formControlName="pokePaste"
-          class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
-        />
-      </div>
-      <div class="w-1/3">
-        <label class="p-1">Score</label>
-        <input
-          formControlName="score"
-          class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
-        />
+<div class="flex">
+  <form
+    [formGroup]="aTeamForm"
+    class="w-1/2 p-2 m-2 space-y-3 shadow-md bg-cyan-300 team hover:shadow-md shadow-cyan-600 rounded-xl"
+  >
+    <div class="w-full">
+      <div class="flex space-x-3">
+        <div class="w-1/3">
+          <label class="p-1">PokePaste</label>
+          <input
+            formControlName="pokePaste"
+            class="w-full p-1 mx-1 text-center rounded-full shadow-inner bg-cyan-200 text-medium shadow-cyan-600"
+          />
+        </div>
+        <div class="w-1/3">
+          `
+          <label class="p-1">Score</label>
+          <input
+            formControlName="score"
+            class="w-full p-1 mx-1 text-center rounded-full shadow-inner bg-cyan-200 text-medium shadow-cyan-600"
+          />
+        </div>
       </div>
     </div>
-  </div>
-  <div class="p-2 border-2 border-rose-200 rounded-xl">
-    <ul>
-      <ol *ngFor="let pokemonForm of aTeamArray.controls; let i = index">
-        <pokemon-form
-          [pokemonForm]="$any(pokemonForm)"
-          [formIndex]="i"
-          (deletePokemonEvent)="deletePokemon($event)"
-          (addPokemonEvent)="addNewPokemon(i, $event)"
-        ></pokemon-form>
-      </ol>
-    </ul>
+    <div class="p-2 border-2 border-rose-200 rounded-xl">
+      <ul>
+        <ol *ngFor="let pokemonForm of aTeamArray.controls; let i = index">
+          <pokemon-form
+            [pokemonForm]="$any(pokemonForm)"
+            [formIndex]="i"
+            (deletePokemonEvent)="deletePokemon($event)"
+            (addPokemonEvent)="addNewPokemon(i, $event)"
+          ></pokemon-form>
+        </ol>
+      </ul>
+      <button
+        (click)="addNewPokemon()"
+        class="px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600"
+      >
+        Add
+      </button>
+    </div>
     <button
-      (click)="addNewPokemon()"
-      class="px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600"
+      type="submit"
+      class="w-1/6 px-1 my-3 rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600"
     >
-      Add
+      Submit
     </button>
-  </div>
-  <button
-    type="submit"
-    class="w-1/6 px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600"
+    {{ aTeamForm.value | json }}<br />
+  </form>
+
+  <form
+    [formGroup]="bTeamForm"
+    class="w-1/2 p-2 m-2 space-y-3 bg-red-300 shadow-md team hover:shadow-md shadow-red-600 rounded-xl"
   >
-    Submit
-  </button>
-</form>
-{{ aTeamForm.value | json }}<br />
+    <div class="w-full">
+      <div class="flex space-x-3">
+        <div class="w-1/3">
+          <label class="p-1">PokePaste</label>
+          <input
+            formControlName="pokePaste"
+            class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
+          />
+        </div>
+        <div class="w-1/3">
+          <label class="p-1">Score</label>
+          <input
+            formControlName="score"
+            class="w-full p-1 mx-1 text-center bg-red-200 rounded-full shadow-inner text-medium shadow-red-600"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="p-2 border-2 border-rose-200 rounded-xl">
+      <ul>
+        <ol *ngFor="let pokemonForm of aTeamArray.controls; let i = index">
+          <pokemon-form
+            [pokemonForm]="$any(pokemonForm)"
+            [formIndex]="i"
+            (deletePokemonEvent)="deletePokemon($event)"
+            (addPokemonEvent)="addNewPokemon(i, $event)"
+          ></pokemon-form>
+        </ol>
+      </ul>
+      <button
+        (click)="addNewPokemon()"
+        class="px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600"
+      >
+        Add
+      </button>
+    </div>
+    <button
+      type="submit"
+      class="w-1/6 px-1 my-3 bg-red-300 rounded-full shadow hover:shadow shadow-red-600"
+    >
+      Submit
+    </button>
+    {{ bTeamForm.value | json }}<br />
+  </form>
+</div>
