update sprite to support shiny

--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -26,7 +26,7 @@
         <div class="grid grid-cols-6 px-4 pt-2 sprites">
           <sprite
             *ngFor="let pokemon of team.team"
-            [pokemonId]="pokemon.pid"
+            [pokemon]="pokemon"
           ></sprite>
         </div>
       </div>
