--- a/src/app/matchup-overview/matchup/summery/summery.component.html
+++ b/src/app/matchup-overview/matchup/summery/summery.component.html
@@ -66,7 +66,7 @@
         </div>
       </td>
       <td>
-        <sprite [pokemonId]="pokemon.pid"></sprite>
+        <sprite [pokemon]="pokemon"></sprite>
       </td>
       <td>{{ pokemon.name }}</td>
       <td>
