--- a/src/app/matchup-overview/matchup/typechart/typechart.component.html
+++ b/src/app/matchup-overview/matchup/typechart/typechart.component.html
@@ -1,50 +1,93 @@
 <div class="w-fit">
-    <button (click)="swapTeams()" class="px-3 text-sm border-t-4 border-b border-x-4 border-slate-400 rounded-t-xl"
-        [ngClass]="teamColor(true)">Swap</button>
-    <table class="overflow-auto border-4 table-fixed touch-auto border-slate-400">
-        <thead class="">
-            <tr class="">
-                <th class="left-0 border-r-4 border-slate-400" [ngClass]="teamColor()"></th>
-                <th class="left-0 border-b-2 bg-slate-300 border-slate-400" *ngFor="let type of types">
-                    <img class="" src="https://play.pokemonshowdown.com/sprites/types/{{type}}.png" alt={{type}}>
-                </th>
-            </tr>
-        </thead>
-        <tbody class="border-b-4 border-slate-400">
-            <tr *ngFor="let pokemon of teams[selectedTeam].team" class="">
-                <th class="w-12 border-r-4 border-slate-400" [ngClass]="teamColor()">
-                    <sprite [pokemonId]="pokemon.pid"></sprite>
-                </th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="typeColor(pokemon.weak[type])">
-                    {{pokemon.weak[type]}}</td>
-            </tr>
-        </tbody>
-        <tfoot id="typeSum" class="bg-slate-300">
-            <tr>
-                <th class="text-xs bg-rose-400">Weaks</th>
-                <td *ngFor="let type of types" class="text-center"
-                    [ngClass]="weakColor(teams[selectedTeam].weaknesses[type])">{{teams[selectedTeam].weaknesses[type]}}
-                </td>
-            </tr>
-            <tr>
-                <th class="text-xs bg-emerald-400">Resists</th>
-                <td *ngFor="let type of types" class="text-center"
-                    [ngClass]="resistColor(teams[selectedTeam].resistances[type])">
-                    {{teams[selectedTeam].resistances[type]}}</td>
-            </tr>
-            <tr>
-                <th class="text-xs bg-gradient-to-r from-rose-400 from-50% to-emerald-400 to-50%">
-                    Diff</th>
-                <td *ngFor="let type of types" class="text-center"
-                    [ngClass]="diffColor(teams[selectedTeam].difference[type])">{{teams[selectedTeam].difference[type]}}
-                </td>
-            </tr>
-            <tr>
-                <th class="text-xs bg-gradient-to-r from-rose-400 via-slate-200 to-emerald-400">Log</th>
-                <td *ngFor="let type of types" class="text-center"
-                    [ngClass]="diffColor(teams[selectedTeam].differential[type])">
-                    {{teams[selectedTeam].differential[type] | number: '1.0-0'}}</td>
-            </tr>
-        </tfoot>
-    </table>
+  <button
+    (click)="swapTeams()"
+    class="px-3 text-sm border-t-4 border-b border-x-4 border-slate-400 rounded-t-xl"
+    [ngClass]="teamColor(true)"
+  >
+    Swap
+  </button>
+  <table class="overflow-auto border-4 table-fixed touch-auto border-slate-400">
+    <thead class="">
+      <tr class="">
+        <th
+          class="left-0 border-r-4 border-slate-400"
+          [ngClass]="teamColor()"
+        ></th>
+        <th
+          class="left-0 border-b-2 bg-slate-300 border-slate-400"
+          *ngFor="let type of types"
+        >
+          <img
+            class=""
+            src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
+            alt="{{ type }}"
+          />
+        </th>
+      </tr>
+    </thead>
+    <tbody class="border-b-4 border-slate-400">
+      <tr *ngFor="let pokemon of teams[selectedTeam].team" class="">
+        <th class="w-12 border-r-4 border-slate-400" [ngClass]="teamColor()">
+          <sprite [pokemon]="pokemon"></sprite>
+        </th>
+        <td
+          *ngFor="let type of types"
+          class="text-center"
+          [ngClass]="typeColor(pokemon.weak[type])"
+        >
+          {{ pokemon.weak[type] }}
+        </td>
+      </tr>
+    </tbody>
+    <tfoot id="typeSum" class="bg-slate-300">
+      <tr>
+        <th class="text-xs bg-rose-400">Weaks</th>
+        <td
+          *ngFor="let type of types"
+          class="text-center"
+          [ngClass]="weakColor(teams[selectedTeam].weaknesses[type])"
+        >
+          {{ teams[selectedTeam].weaknesses[type] }}
+        </td>
+      </tr>
+      <tr>
+        <th class="text-xs bg-emerald-400">Resists</th>
+        <td
+          *ngFor="let type of types"
+          class="text-center"
+          [ngClass]="resistColor(teams[selectedTeam].resistances[type])"
+        >
+          {{ teams[selectedTeam].resistances[type] }}
+        </td>
+      </tr>
+      <tr>
+        <th
+          class="text-xs bg-gradient-to-r from-rose-400 from-50% to-emerald-400 to-50%"
+        >
+          Diff
+        </th>
+        <td
+          *ngFor="let type of types"
+          class="text-center"
+          [ngClass]="diffColor(teams[selectedTeam].difference[type])"
+        >
+          {{ teams[selectedTeam].difference[type] }}
+        </td>
+      </tr>
+      <tr>
+        <th
+          class="text-xs bg-gradient-to-r from-rose-400 via-slate-200 to-emerald-400"
+        >
+          Log
+        </th>
+        <td
+          *ngFor="let type of types"
+          class="text-center"
+          [ngClass]="diffColor(teams[selectedTeam].differential[type])"
+        >
+          {{ teams[selectedTeam].differential[type] | number : "1.0-0" }}
+        </td>
+      </tr>
+    </tfoot>
+  </table>
 </div>
