--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -6,7 +6,7 @@
       <sprite
         class="flex justify-center"
         *ngFor="let pokemon of draft.team"
-        [pokemonId]="pokemon.pid"
+        [pokemon]="pokemon"
         [flipped]="true"
       >
       </sprite>
@@ -47,7 +47,7 @@
               <div class="grid grid-cols-6 px-4 pt-2 sprites">
                 <sprite
                   *ngFor="let pokemon of matchup.bTeam.team"
-                  [pokemonId]="pokemon.pid"
+                  [pokemon]="pokemon"
                 ></sprite>
               </div>
             </div>
