pokemon type bug fixes

--- a/src/app/matchup-overview/matchup/overview/overview.component.html
+++ b/src/app/matchup-overview/matchup/overview/overview.component.html
@@ -19,7 +19,7 @@
           class="h-12 border-b bg-cyan-300 border-slate-400"
         >
           <td class="w-8 -mr-2">
-            <div *ngIf="pokemon.captain">
+            <div *ngIf="pokemon.capt">
               <div>
                 <img src="../../../assets/icons/tera.svg" />
               </div>
@@ -60,7 +60,7 @@
             <sprite [pokemon]="pokemon"></sprite>
           </td>
           <td>
-            <div class="w-8 -ml-2" *ngIf="pokemon.captain">
+            <div class="w-8 -ml-2" *ngIf="pokemon.capt">
               <div>
                 <img src="../../../assets/icons/tera.svg" />
               </div>
