--- a/src/app/matchup-overview/matchup/summery/summery.component.html
+++ b/src/app/matchup-overview/matchup/summery/summery.component.html
@@ -56,7 +56,7 @@
       class="h-12 border-b border-slate-400"
     >
       <td>
-        <div *ngIf="pokemon.captain">
+        <div *ngIf="pokemon.capt">
           <div>
             <img src="../../../assets/icons/tera.svg" />
           </div>
