--- a/src/app/matchup-overview/matchup/overview/overview.component.html
+++ b/src/app/matchup-overview/matchup/overview/overview.component.html
@@ -18,12 +18,15 @@
           *ngFor="let pokemon of aTeam.team"
           class="h-12 border-b bg-cyan-300 border-slate-400"
         >
-          <td class="w-8 -mr-2">
-            <div *ngIf="pokemon.capt">
-              <div>
-                <img src="../../../assets/icons/tera.svg" />
+          <td class="w-fit">
+            <div *ngIf="pokemon.capt" class="w-6 -mr-2">
+              <div *ngIf="pokemon.capt.tera">
+                <img
+                  src="../../../assets/icons/tera.svg"
+                  title="{{ pokemon.capt.tera }}"
+                />
               </div>
-              <div>
+              <div *ngIf="pokemon.capt.z">
                 <img src="../../../assets/icons/z.svg" />
               </div>
             </div>
@@ -59,12 +62,15 @@
           <td class="w-20">
             <sprite [pokemon]="pokemon"></sprite>
           </td>
-          <td>
-            <div class="w-8 -ml-2" *ngIf="pokemon.capt">
-              <div>
-                <img src="../../../assets/icons/tera.svg" />
+          <td class="w-fit">
+            <div *ngIf="pokemon.capt" class="w-6 -ml-2">
+              <div *ngIf="pokemon.capt.tera">
+                <img
+                  src="../../../assets/icons/tera.svg"
+                  title="{{ pokemon.capt.tera }}"
+                />
               </div>
-              <div>
+              <div *ngIf="pokemon.capt.z">
                 <img src="../../../assets/icons/z.svg" />
               </div>
             </div>
