share and back buttons created. Share matchup also working

--- a/src/app/matchup-overview/matchup/summery/summery.component.html
+++ b/src/app/matchup-overview/matchup/summery/summery.component.html
@@ -144,8 +144,14 @@
     <tr class="bg-slate-300">
       <td></td>
       <td></td>
-      <td>
+      <td class="flex">
         <input type="range" min="20" max="140" [(ngModel)]="baseValue" />
+        <input
+          type="number"
+          [(ngModel)]="baseValue"
+          value="{{ baseValue }}"
+          class="w-8 bg-transparent"
+        />
       </td>
       <td class="text-center">Median</td>
       <td
@@ -188,14 +194,7 @@
     <tr class="bg-slate-300">
       <td></td>
       <td></td>
-      <td class="flex justify-center">
-        <input
-          type="number"
-          [(ngModel)]="baseValue"
-          value="{{ baseValue }}"
-          class="w-8"
-        />
-      </td>
+      <td></td>
       <td class="text-center">Max</td>
       <td
         class="text-center"
