--- a/src/app/opponent-overview/opponent-overview.component.html
+++ b/src/app/opponent-overview/opponent-overview.component.html
@@ -1,11 +1,12 @@
 <div class="m-2">
   <div class="w-full p-2">
     <div class="flex">
-      <a
+      <button
         routerLink="/draft"
-        class="flex justify-center px-2 text-center rounded-full shadow bg-cyan-300 hover:shadow shadow-cyan-600"
-        >Back</a
+        class="px-3 py-2 text-sm text-white rounded-md bg-slate-500"
       >
+        Back
+      </button>
       <h1 class="m-2 text-3xl bold">{{ draft.leagueName }}</h1>
       <h2 class="m-2 text-2xl bold">
         {{ draft.score.wins }} - {{ draft.score.loses }} ｜
