--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -1,12 +1,12 @@
 <div class="bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
   <div class="flex px-2 pt-2">
     <div class="w-1/2">
-      <a
+      <button
         routerLink="/draft/{{ leagueId }}"
         class="px-3 py-2 text-sm text-white rounded-md bg-slate-600"
       >
         Back
-      </a>
+      </button>
     </div>
     <div class="flex justify-end w-1/2">
       <div class="flex justify-end w-1/2">
